[package]
build = "build.rs"
exclude = ["tests/", "benches/", "docs/", ".github/", "book/", ".pmat/", "target/", ".profraw", ".profdata", ".vscode/", ".idea/", "proptest-regressions/"]
name = "pacha"
version = "0.2.6"
edition = "2021"
authors = ["Pragmatic AI Labs <info@paiml.com>"]
license = "MIT"
description = "Model, Data and Recipe Registry with full lineage tracking"
repository = "https://github.com/paiml/pacha"
keywords = ["ml", "registry", "mlops", "lineage", "reproducibility"]
categories = ["science", "database"]
rust-version = "1.75"
readme = "README.md"

[dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Content-addressed storage
blake3 = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmp-serde = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Compression
zstd = { version = "0.13", optional = true }

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }

# Ecosystem integration
aprender = { version = "0.27.5", optional = true }
alimentar = { version = "0.2.3", optional = true }

# HTTP client (optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Encryption (optional)
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }

# Signing (proper Ed25519)
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
rand = { version = "0.8", optional = true }

# Graph for lineage (optional)
trueno-graph = { version = "0.1.17", optional = true }

[dev-dependencies]
proptest = "1.6"
tempfile = "3"
criterion = { version = "0.6", features = ["html_reports"] }

[features]
default = ["compression", "cli", "signing"]
compression = ["zstd"]
cli = ["clap"]
remote = ["reqwest", "tokio"]
encryption = ["chacha20poly1305", "argon2", "rand"]
signing = ["ed25519-dalek", "rand"]
lineage-graph = ["trueno-graph"]
aprender-integration = ["aprender"]
alimentar-integration = ["alimentar"]
full = ["compression", "cli", "remote", "encryption", "signing", "lineage-graph", "aprender-integration", "alimentar-integration"]

[[bin]]
name = "pacha"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "pacha"
path = "src/lib.rs"

[[bench]]
name = "content_address"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

[workspace]
members = ["."]

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Code quality
complexity = { level = "warn", priority = -1 }
unwrap_used = "allow"
expect_used = "allow"
pedantic = { level = "warn", priority = -1 }

# Allow some pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
needless_raw_string_hashes = "allow"
redundant_closure_for_method_calls = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
uninlined_format_args = "allow"
semicolon_if_nothing_returned = "allow"
approx_constant = "allow"
iter_without_into_iter = "allow"
float_cmp = "allow"
needless_pass_by_value = "allow"
unreadable_literal = "allow"
match_wildcard_for_single_variants = "allow"
explicit_iter_loop = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
cast_lossless = "allow"
default_trait_access = "allow"
useless_conversion = "allow"
manual_string_new = "allow"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
shared-version = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [{{version}}] - {{date}}"

[profile.dev]
panic = "abort"
